# devlog-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  COMMAND_PARADIGM.md  DEVLOG.json  README.md  ROADMAP.md  SPEC.md  pyproject.toml
.devlog/: aims.yaml  arch.yaml  briefs.yaml  calls.yaml  constraints.yaml  debt.yaml  events.jsonl  index.json  milestones.yaml  notes.yaml  shifts.yaml  snags.yaml  tension.yaml
.github/workflows/: test.yml
devlog/: config.py  generators.py  main.py  models.py  parser.py  storage.py
tests/: test_cli_edges.py  test_cli_v030.py  test_config.py  test_storage_generators.py
